Bug 94339 - how to reduce chatty messages on SunOS
Summary: how to reduce chatty messages on SunOS
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: daemon (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Solaris
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 93823
  Show dependency treegraph
 
Reported: 2016-02-29 18:12 UTC by Richard PALO
Modified: 2016-04-25 16:46 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Richard PALO 2016-02-29 18:12:01 UTC
every 6 seconds I'm seeing the following in /var/adm/messages on SunOS 5.11
with pulseaudio from pkgsrc...

Feb 29 19:03:21 omnis pulseaudio[11843]: [ID 295310 user.error] [(null)] pstream-util.c: Code should not be reached at pulsecore/pstream-util.c:82, function pa_pstream_send_tagstruct_with_fds(). Aborting.
Feb 29 19:03:21 omnis pulseaudio[11843]: [ID 295310 user.error] [(null)] pstream-util.c: Code should not be reached at pulsecore/pstream-util.c:82, function pa_pstream_send_tagstruct_with_fds(). Aborting.
Feb 29 19:03:27 omnis pulseaudio[11846]: [ID 295310 user.warning] [(null)] main.c: Compiled with DEPRECATED libsamplerate support!
Feb 29 19:03:27 omnis pulseaudio[11846]: [ID 295310 user.warning] [(null)] pid.c: Stale PID file, overwriting.
Feb 29 19:03:27 omnis pulseaudio[11846]: [ID 295310 user.warning] [(null)] module.c: module-detect is deprecated: Please use module-udev-detect instead of module-detect!
Feb 29 19:03:27 omnis pulseaudio[11846]: [ID 295310 user.error] [(null)] pstream-util.c: Code should not be reached at pulsecore/pstream-util.c:82, function pa_pstream_send_tagstruct_with_fds(). Aborting.
Feb 29 19:03:27 omnis pulseaudio[11846]: [ID 295310 user.error] [(null)] pstream-util.c: Code should not be reached at pulsecore/pstream-util.c:82, function pa_pstream_send_tagstruct_with_fds(). Aborting.

I can probably get rid of the DEPRECATED libsamplerate support which
seems to be on by default in pkgsrc... by the rest?
Comment 1 Tanu Kaskinen 2016-03-01 09:45:12 UTC
Pulseaudio seems to be crashing. I suppose in addition to the chatty messages, pulseaudio doesn't actually work?

The crash is something we need to fix, and also the useless warning about module-detect should be removed for SunOS.

You can change

    load-module module-native-protocol-unix

to

    load-module module-native-protocol-unix srbchannel=false

in /etc/pulse/default.pa to work around the crash.
Comment 2 Tanu Kaskinen 2016-03-01 09:45:48 UTC
Marking as a release blocker.
Comment 3 Ahmed S. Darwish 2016-04-22 20:02:15 UTC
Fixes for Solaris are just sent here:

- https://patchwork.freedesktop.org/patch/83109/
- https://patchwork.freedesktop.org/patch/83110/
Comment 4 Tanu Kaskinen 2016-04-25 16:46:40 UTC
The patches are now applied.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.